mdapipkg/unpackaged/objects/AD_User_Inactivation__e.object
<CustomObject>
    <fields>
        <fullName>AD_Federation_Id__c</fullName>
        <label>AD Federation Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_SEC_ID__c</fullName>
        <label>AD SEC ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AD User Inactivation</label>
    <pluralLabel>AD User Inactivations</pluralLabel>
</CustomObject>